<resources>
    <string name="app_name">mkluk-Countbook</string>
    <string name="addCounter">Add Counter</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">Delete Counter</string>
    <string name="reset">Reset Counter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nameMsg">Enter a name</string>
    <string name="name">Name:</string>
    <string name="initValue">Initial Value:</string>
    <string name="initMsg">Enter an initial value</string>
    <string name="comment">Comment:</string>
    <string name="commentMsg">Enter a comment</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="currValue">Current Value:</string>
    <string name="changeName">Change Name:</string>
    <string name="changeInit">Change Initial Value:</string>
    <string name="changeCurr">Change Current Value:</string>
    <string name="changeComment">Change Comments:</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="editValues">Edit Values of Counter</string>
    <string name="increment">Add/Subtract to/from Current Value</string>
</resources>
